# SuetaBot

./: pyproject.toml
src/: main.py
