[tool.poetry]
name = "botapril22"
version = "0.1.0"
description = ""
authors = ["Roman Grigoryev <hjklvfr@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.4.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

